# TrafficSimulator

./: CMakeLists.txt
apps/core/: CMakeLists.txt
apps/core/include/core/: Intersection.hpp  Lane.hpp  Road.hpp  Simulation.hpp  TrafficLight.hpp  Vehicle.hpp
apps/core/src/: Simulation.cpp  Vehicle.cpp  utils.hpp
apps/core/src/routing/: Route.hpp  RouteKey.hpp
apps/test/: CMakeLists.txt  main.cpp
apps/trafficsim/: CMakeLists.txt  main.cpp
apps/trafficsim/src/: CarItem.hpp  MainWindow.hpp  SimulationView.hpp
libs/pathfinding/: CMakeLists.txt
libs/pathfinding/include/: Graph.hpp
libs/pathfinding/include/pathfinding/: pathfinding.hpp
